fix navBar z-index

--- a/src/StylesFile/navBar.css
+++ b/src/StylesFile/navBar.css
@@ -13,6 +13,7 @@ header {
 	padding: 0 2rem;
 	background-color: var(--mainColor);
 	color: var(--textColor);
+	
 }
 
 nav a {
@@ -41,6 +42,7 @@ header div,
 nav {
 	display: flex;
 	align-items: center;
+	z-index: 1;
 }
 
 
